<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical">


    <EditText
        android:layout_width="match_parent"
        android:hint="@string/email_hint"
        android:id="@+id/email_et"
        android:layout_height="wrap_content" />


    <EditText
        android:layout_width="match_parent"
        android:hint="@string/password_hint"
        android:layout_marginTop="8dp"
        android:id="@+id/password_et"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_btn"
            android:text="@string/login"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_btn"
            android:text="@string/register"/>

    </LinearLayout>


</LinearLayout>