<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/email_hint"
            android:id="@+id/email_et"
            android:inputType="text"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="@string/username"/>



        <EditText
            android:layout_width="match_parent"
            android:hint="@string/password_hint"
            android:layout_marginTop="8dp"
            android:id="@+id/password_et"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />





    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:layout_width="match_parent"
            android:text="@string/register"
            android:id="@+id/register_btn"
            android:enabled="false"
            android:layout_height="wrap_content" />

    </LinearLayout>



</LinearLayout>