<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="@dimen/material_layout_vertical_spacing_between_content_areas"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/header"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Body2"
            android:text="@string/order_label"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text = "La fraschetta"
            style="@style/TextAppearance.AppCompat.Title"
            android:id="@+id/restaurant_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text = "La fraschetta"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/restaurant_adress"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/material_layout_vertical_spacing_between_content_areas"
            android:background="@color/divider"/>



    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/product_rv"
        android:layout_marginTop="@dimen/material_layout_vertical_spacing_between_content_areas"
        android:layout_below="@id/header"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_rv"
        android:id="@+id/total_tv"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_marginTop="@dimen/vertical_margin"
        tools:text="@string/total"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:textColor="@color/primary_text"
        android:id="@+id/pay_btn"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/pay"/>



</RelativeLayout>